// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plugin-postcssLegacy > should allow tools.postcss to override the plugins 1`] = `
[
  {
    "oneOf": [
      {
        "resolve": {
          "preferRelative": true,
        },
        "sideEffects": true,
        "test": /\\\\\\.module\\\\\\.\\\\w\\+\\$/i,
        "type": "css/module",
        "use": [
          {
            "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/shared/compiled/postcss-loader",
            "options": {
              "postcssOptions": {
                "config": false,
                "plugins": [],
              },
              "sourceMap": true,
            },
          },
        ],
      },
      {
        "resolve": {
          "preferRelative": true,
        },
        "sideEffects": true,
        "type": "css",
        "use": [
          {
            "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/shared/compiled/postcss-loader",
            "options": {
              "postcssOptions": {
                "config": false,
                "plugins": [],
              },
              "sourceMap": true,
            },
          },
        ],
      },
    ],
    "test": /\\\\\\.css\\$/,
  },
]
`;

exports[`plugin-postcssLegacy > should allow tools.postcss to override the plugins 2`] = `
[
  {
    "oneOf": [
      {
        "resolve": {
          "preferRelative": true,
        },
        "sideEffects": true,
        "test": /\\\\\\.module\\\\\\.\\\\w\\+\\$/i,
        "type": "css/module",
        "use": [
          {
            "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/shared/compiled/postcss-loader",
            "options": {
              "postcssOptions": {
                "config": false,
                "plugins": [],
              },
              "sourceMap": true,
            },
          },
          {
            "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/shared/compiled/resolve-url-loader",
            "options": {
              "join": [Function],
              "sourceMap": false,
            },
          },
          {
            "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/shared/compiled/sass-loader",
            "options": {
              "implementation": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/shared/compiled/sass",
              "sourceMap": true,
            },
          },
        ],
      },
      {
        "resolve": {
          "preferRelative": true,
        },
        "sideEffects": true,
        "type": "css",
        "use": [
          {
            "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/shared/compiled/postcss-loader",
            "options": {
              "postcssOptions": {
                "config": false,
                "plugins": [],
              },
              "sourceMap": true,
            },
          },
          {
            "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/shared/compiled/resolve-url-loader",
            "options": {
              "join": [Function],
              "sourceMap": false,
            },
          },
          {
            "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/shared/compiled/sass-loader",
            "options": {
              "implementation": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/shared/compiled/sass",
              "sourceMap": true,
            },
          },
        ],
      },
    ],
    "test": /\\\\\\.s\\(\\?:a\\|c\\)ss\\$/,
  },
]
`;

exports[`plugin-postcssLegacy > should allow tools.postcss to override the plugins 3`] = `
[
  {
    "oneOf": [
      {
        "resolve": {
          "preferRelative": true,
        },
        "sideEffects": true,
        "test": /\\\\\\.module\\\\\\.\\\\w\\+\\$/i,
        "type": "css/module",
        "use": [
          {
            "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/shared/compiled/postcss-loader",
            "options": {
              "postcssOptions": {
                "config": false,
                "plugins": [],
              },
              "sourceMap": true,
            },
          },
          {
            "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/shared/compiled/less-loader",
            "options": {
              "implementation": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/shared/compiled/less",
              "lessOptions": {
                "javascriptEnabled": true,
                "paths": [
                  "node_modules",
                ],
              },
              "sourceMap": true,
            },
          },
        ],
      },
      {
        "resolve": {
          "preferRelative": true,
        },
        "sideEffects": true,
        "type": "css",
        "use": [
          {
            "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/shared/compiled/postcss-loader",
            "options": {
              "postcssOptions": {
                "config": false,
                "plugins": [],
              },
              "sourceMap": true,
            },
          },
          {
            "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/shared/compiled/less-loader",
            "options": {
              "implementation": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/shared/compiled/less",
              "lessOptions": {
                "javascriptEnabled": true,
                "paths": [
                  "node_modules",
                ],
              },
              "sourceMap": true,
            },
          },
        ],
      },
    ],
    "test": /\\\\\\.less\\$/,
  },
]
`;

exports[`plugin-postcssLegacy > should register postcss plugin by browserslist 1`] = `
[
  {
    "oneOf": [
      {
        "resolve": {
          "preferRelative": true,
        },
        "sideEffects": true,
        "test": /\\\\\\.module\\\\\\.\\\\w\\+\\$/i,
        "type": "css/module",
        "use": [
          {
            "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/shared/compiled/postcss-loader",
            "options": {
              "postcssOptions": {
                "config": false,
                "plugins": [
                  {
                    "browsers": [
                      "chrome >= 87",
                    ],
                    "info": [Function],
                    "options": {
                      "flexbox": "no-2009",
                      "overrideBrowserslist": [
                        "chrome >= 87",
                      ],
                    },
                    "postcssPlugin": "autoprefixer",
                    "prepare": [Function],
                  },
                  [Function],
                  [Function],
                  [Function],
                ],
              },
              "sourceMap": true,
            },
          },
        ],
      },
      {
        "resolve": {
          "preferRelative": true,
        },
        "sideEffects": true,
        "type": "css",
        "use": [
          {
            "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/shared/compiled/postcss-loader",
            "options": {
              "postcssOptions": {
                "config": false,
                "plugins": [
                  {
                    "browsers": [
                      "chrome >= 87",
                    ],
                    "info": [Function],
                    "options": {
                      "flexbox": "no-2009",
                      "overrideBrowserslist": [
                        "chrome >= 87",
                      ],
                    },
                    "postcssPlugin": "autoprefixer",
                    "prepare": [Function],
                  },
                  [Function],
                  [Function],
                  [Function],
                ],
              },
              "sourceMap": true,
            },
          },
        ],
      },
    ],
    "test": /\\\\\\.css\\$/,
  },
]
`;

exports[`plugin-postcssLegacy > should register postcss plugin by browserslist 2`] = `
[
  {
    "oneOf": [
      {
        "resolve": {
          "preferRelative": true,
        },
        "sideEffects": true,
        "test": /\\\\\\.module\\\\\\.\\\\w\\+\\$/i,
        "type": "css/module",
        "use": [
          {
            "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/shared/compiled/postcss-loader",
            "options": {
              "postcssOptions": {
                "config": false,
                "plugins": [
                  {
                    "browsers": [
                      "chrome >= 87",
                    ],
                    "info": [Function],
                    "options": {
                      "flexbox": "no-2009",
                      "overrideBrowserslist": [
                        "chrome >= 87",
                      ],
                    },
                    "postcssPlugin": "autoprefixer",
                    "prepare": [Function],
                  },
                  [Function],
                  [Function],
                  [Function],
                ],
              },
              "sourceMap": true,
            },
          },
          {
            "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/shared/compiled/resolve-url-loader",
            "options": {
              "join": [Function],
              "sourceMap": false,
            },
          },
          {
            "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/shared/compiled/sass-loader",
            "options": {
              "implementation": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/shared/compiled/sass",
              "sourceMap": true,
            },
          },
        ],
      },
      {
        "resolve": {
          "preferRelative": true,
        },
        "sideEffects": true,
        "type": "css",
        "use": [
          {
            "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/shared/compiled/postcss-loader",
            "options": {
              "postcssOptions": {
                "config": false,
                "plugins": [
                  {
                    "browsers": [
                      "chrome >= 87",
                    ],
                    "info": [Function],
                    "options": {
                      "flexbox": "no-2009",
                      "overrideBrowserslist": [
                        "chrome >= 87",
                      ],
                    },
                    "postcssPlugin": "autoprefixer",
                    "prepare": [Function],
                  },
                  [Function],
                  [Function],
                  [Function],
                ],
              },
              "sourceMap": true,
            },
          },
          {
            "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/shared/compiled/resolve-url-loader",
            "options": {
              "join": [Function],
              "sourceMap": false,
            },
          },
          {
            "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/shared/compiled/sass-loader",
            "options": {
              "implementation": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/shared/compiled/sass",
              "sourceMap": true,
            },
          },
        ],
      },
    ],
    "test": /\\\\\\.s\\(\\?:a\\|c\\)ss\\$/,
  },
]
`;

exports[`plugin-postcssLegacy > should register postcss plugin by browserslist 3`] = `
[
  {
    "oneOf": [
      {
        "resolve": {
          "preferRelative": true,
        },
        "sideEffects": true,
        "test": /\\\\\\.module\\\\\\.\\\\w\\+\\$/i,
        "type": "css/module",
        "use": [
          {
            "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/shared/compiled/postcss-loader",
            "options": {
              "postcssOptions": {
                "config": false,
                "plugins": [
                  {
                    "browsers": [
                      "chrome >= 87",
                    ],
                    "info": [Function],
                    "options": {
                      "flexbox": "no-2009",
                      "overrideBrowserslist": [
                        "chrome >= 87",
                      ],
                    },
                    "postcssPlugin": "autoprefixer",
                    "prepare": [Function],
                  },
                  [Function],
                  [Function],
                  [Function],
                ],
              },
              "sourceMap": true,
            },
          },
          {
            "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/shared/compiled/less-loader",
            "options": {
              "implementation": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/shared/compiled/less",
              "lessOptions": {
                "javascriptEnabled": true,
                "paths": [
                  "node_modules",
                ],
              },
              "sourceMap": true,
            },
          },
        ],
      },
      {
        "resolve": {
          "preferRelative": true,
        },
        "sideEffects": true,
        "type": "css",
        "use": [
          {
            "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/shared/compiled/postcss-loader",
            "options": {
              "postcssOptions": {
                "config": false,
                "plugins": [
                  {
                    "browsers": [
                      "chrome >= 87",
                    ],
                    "info": [Function],
                    "options": {
                      "flexbox": "no-2009",
                      "overrideBrowserslist": [
                        "chrome >= 87",
                      ],
                    },
                    "postcssPlugin": "autoprefixer",
                    "prepare": [Function],
                  },
                  [Function],
                  [Function],
                  [Function],
                ],
              },
              "sourceMap": true,
            },
          },
          {
            "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/shared/compiled/less-loader",
            "options": {
              "implementation": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/shared/compiled/less",
              "lessOptions": {
                "javascriptEnabled": true,
                "paths": [
                  "node_modules",
                ],
              },
              "sourceMap": true,
            },
          },
        ],
      },
    ],
    "test": /\\\\\\.less\\$/,
  },
]
`;
